--- a/css/styles.css
+++ b/css/styles.css
@@ -632,13 +632,13 @@ img {
 }
 .overlay {
   position: absolute;
-  top: 100%;
+  top: 2px;
   left: 0;
   width: 100%;
   height: 100%;
   padding: 63px 24px;
   overflow: auto;
-  /* transform: translateY(100%); */
+  transform: translateY(100%);
   transition: transform 500ms linear;
 
   font-weight: 400px;
@@ -647,11 +647,10 @@ img {
   letter-spacing: 0.03em;
   /* color: #ffffff; */
   background: rgba(33, 150, 243, 0.9);
-  color: #ffffff;
 }
 .portfolio-grid-link:hover .overlay,
 .portfolio-grid-link:focus .overlay {
-  transform: translate(-100%);
+  transform: translate(0%);
 }
 
 /* =============Modal====================== */
