--- a/css/styles.css
+++ b/css/styles.css
@@ -632,25 +632,24 @@ img {
 }
 .overlay {
   position: absolute;
-  top: 2px;
+  top: 100%;
   left: 0;
   width: 100%;
   height: 100%;
   padding: 63px 24px;
   overflow: auto;
-  transform: translateY(100%);
   transition: transform 500ms linear;
 
   font-weight: 400px;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-  /* color: #ffffff; */
+  color: #ffffff;
   background: rgba(33, 150, 243, 0.9);
 }
 .portfolio-grid-link:hover .overlay,
 .portfolio-grid-link:focus .overlay {
-  transform: translate(0%);
+  transform: translateY(-100%);
 }
 
 /* =============Modal====================== */
